adding new pages files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-My GitHub Page
+<!doctype html>
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title></title>
+  <meta name="description" content="">
+  <link rel="stylesheet" href="stylesheets/screen.css">
+  <!--[if IE]>
+    <link href="stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <![endif]-->
+  <link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
+  <script src="js/libs/modernizr-2.5.3.min.js"></script>
+</head>
+<body>
+  <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
+  <div id="wrapper">
+   <h1>Instaflare</h1>
+   <h2>Instantly make your website's images more valuable.</h2>
+   
+   <div class="photowrapper">
+   <table align="center">
+       <tr>
+           <td><img src="img/photo-original.png" alt="Original" /><h3>Original</h3><p>You'll never be worth a billion with this.<br />&nbsp;</p></td>
+           <td><img src="img/photo-bluerinse.png" alt="Blue Rinse" /><h3>Blue Rinse</h3><p>You tried to wash your socks and<br /> your white shirts together, didn't you?</p></td>
+           <td><img src="img/photo-drugstore.png" alt="Drugstore" /><h3>Drugstore</h3><p>Perhaps you shouldn't have gone for<br /> the cheapest possible photo printing.</p></td>
+       </tr>
+       <tr>
+          <td><img src="img/photo-hangover.png" alt="Hangover" /><h3>Hangover</h3><p>Everything's too bright! Argh, my head.<br />&nbsp;</p></td>
+          <td><img src="img/photo-jaundice.png" alt="Jaundice" /><h3>Jaundice</h3><p>The relaxing yellow hue that<br /> accompanies a severe liver problem.</p></td>
+          <td><img src="img/photo-madison.png" alt="Madison" /><h3>Madison</h3><p>You like to think you're Don Draper,<br /> but you're actually Pete Campbell.</p></td>
+      </tr>
+   </table>
+   </div>
+   <div class="buttonwrapper">
+       <a href='http://www.cloudflare.com/apps/instaflare' class='button'>Check it out!</a>
+   </div>
+  </div>
+  
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
+
+  <script src="js/plugins.js"></script>
+  <script src="js/script.js"></script>
+
+  <script>
+    var _gaq=[['_setAccount','UA-31017392-1'],['_trackPageview']];
+    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+    s.parentNode.insertBefore(g,s)}(document,'script'));
+  </script>
+</body>
+</html>
